tests/any_propagation/any_propagation.exp
Error --------------------------------------------------------------------------------------------------- arrays.js:8:14

Cannot call `noop` with `new_arr` bound to `arr` because in array element: `$NonMaybeType<Array<?string>>` [1] is not
exactly the same as `Array<string>` [2]. [incompatible-type]

The above-mentioned two types must be the same because arrays are invariantly typed. To fix the error,
- Either make `Array<$NonMaybeType<Array<?string>>>` [3] and `Array<Array<string>>` [4] exactly the same
- Or make array type [4] a `$ReadOnlyArray`.
See https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.

   arrays.js:8:14
      8| noop<string>(new_arr);
                      ^^^^^^^

References:
   <BUILTINS>/core.js:1061:47
   1061|     filter(callbackfn: typeof Boolean): Array<$NonMaybeType<T>>;
                                                       ^^^^^^^^^^^^^^^^ [1]
   arrays.js:3:35
      3| declare var noop : <T>(arr: Array<Array<T>>) => void;
                                           ^^^^^^^^ [2]
   <BUILTINS>/core.js:1061:41
   1061|     filter(callbackfn: typeof Boolean): Array<$NonMaybeType<T>>;
                                                 ^^^^^^^^^^^^^^^^^^^^^^^ [3]
   arrays.js:3:29
      3| declare var noop : <T>(arr: Array<Array<T>>) => void;
                                     ^^^^^^^^^^^^^^^ [4]



Found 1 error
